--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,8 @@
 
             <br><hr>
 
-            <footer class=" container text-center" style="margin: 0;">
+            <footer>
+              <div class="container text-center" style="margin: 0;">
                     Copyright&copy;2020Syahi.All rights reserved.<br>
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
