--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
             <br><hr>
 
             <footer>
-              <div class="container text-center" style="margin: 0;">
+              <div class="container" style="margin: 0;">
                     Copyright&copy;2020Syahi.All rights reserved.<br>
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
