--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
         <title>Syahi</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,6 +55,7 @@
                 </div>
             </nav>
           </header>
+
           <section>
                 
                 <div class="container-fluids">
@@ -70,37 +71,29 @@
                </div>
              </section>
 
-             <div class="container">
-               <div class="header">
-                         <h6 class="heading"><span>CONTACT</span></h6>
+          <section>
+                <div class="container quotes">
+                     <div class="header">
+                         <h2 class="heading"><span>CONTACT</span></h2>
                      </div>
+                    <div class="row img-setting">
 
-                     <div class="row text-center">
-                       <div class="contact">
-                        <img src="IMG_20200710_021324.jpg" alt="cover images-4" width="400" height="300"><br><br>
-                        <div class="welcome">
-                        <h5 class="bg-danger"> hey! guys welcome to my blog</h5><br>
+                       <img src="IMG_20200710_021324.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4">
+                       <span class="col-lg-8" style="padding: 10vw">   
+                        <h5> hey! guys welcome to my blog</h5><br>
                     <h6>i am on the facebook,you can follow me by clicking below link :</h6>
                     <a href="https://www.facebook.com/ravi2615/">https://www.facebook.com/ravi2615/</a>
                     <h6>i am on the yourquote's,you can follow me by clicking below link :</h6>
-                    <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a>
-                  </div>
-                       
-                       </div>
-                     </div>
+                    <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a></span>
 
-            <br><hr>
+                <br><br>
+                <hr>
 
-            <footer>
-              <div class="container" style="margin: 0;">
+            <footer class=" container text-center" style="margin-bottom: 0;margin-top: 10vw;">
                     Copyright&copy;2020Syahi.All rights reserved.<br>
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
 
-          </div>
-
-          </main>
-
-        </body>
+</body>
 </html>
