--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="logo.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="script.js">
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -86,14 +88,20 @@
                     <h6>i am on the yourquote's,you can follow me by clicking below link :</h6>
                     <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a></span>
 
-                <br><br>
-                <hr>
+                
+
 
             <footer class=" container text-center" style="margin-bottom: 0;margin-top: 10vw;">
                     Copyright&copy;2020Syahi.All rights reserved.<br>
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
+
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+
+          <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
