--- a/quotes-1.html
+++ b/quotes-1.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="logo.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="script.js">
         <!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -78,7 +79,7 @@
                      </div>
                     <div class="row img-setting">
 
-                       <img src="yourquotes\wosham.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4">
+                       <img src="yourquotes\wosham.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8">________________________<br>" वो शाम भी अजीब थी,<br>
                                     ये शाम भी अजीब है,<br>
                                     बदला तो बस वक़्त है<br>
@@ -97,7 +98,7 @@
                                     बंदिशे जो आज भी हैं"<br>
                                     Inspired by gulzar written song(वो शाम भी अजीब थी)<br>________________________</span>
  
-                       <img src="yourquotes\1594394589920.jpg" alt="cover images-4" width="1000" height="650" class="col-lg-4">
+                       <img src="yourquotes\1594394589920.jpg" alt="cover images-4" width="1000" height="650" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8">________________________<br>" फिर वही रात है, अनकही सी बात है,<br>
                                     तुम हो यहीं हम भी हैं यहीं<br>
                                     और हैं फासले भी वही<br>
@@ -127,30 +128,30 @@
                                     फिर वही रात है, अनकही सी बात है,....<br>
                                     फिर वही रात है... "<br>________________________</span>
 
-                        <img src="yourquotes\xO624888.webp" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                        <img src="yourquotes\xO624888.webp" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>" Ho tum mithi,sakr jaesi,<br>
                                     Mgr ghulti, km ho,,<br>
                                     Ek baat bataun,<br>
                                     Mujhe km sakr,, bahut psnd hai "<br>________________________</span>
 
-                         <img src="yourquotes\1586885326267.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                         <img src="yourquotes\1586885326267.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>" Sang tere bitaye wo pl ,<br> yaadon me apne smbhal rkha hoon,<br>
                                     Plke bndkr khabon ko ,<br> ankhon me apne sja rkha hoon,<br>
                                     Loutkr aana tum<br>
                                     Intezar me tere , shayari ko apne av adhura rkha hoon "<br>________________________</span>
 
-                          <img src="yourquotes\1591076039882.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                          <img src="yourquotes\1591076039882.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>" इस शहर की एक रीत रही है<br>
                                     जो छूटता (बिछड़ता) है, वो कभी फिर मिलता नही । "<br>________________________
                          </span>
 
-                         <img src="yourquotes\1590947685249.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                         <img src="yourquotes\1590947685249.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>
                        	" Ajib ye sehar or is sehar ki hawa hai jnaab<br>
                                 Haal poochho to bolte hain "jldi kaho kya kaam hai "<br>________________________
                          </span> 
 
-                         <img src="yourquotes\1590835306706.jpg" alt="cover images-4" width="400" height="720" class="col-lg-4">
+                         <img src="yourquotes\1590835306706.jpg" alt="cover images-4" width="400" height="720" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>
                        	" (रिस्ते में दरारे पड़ती रहती हैं
                                 अपने रिस्ते पे भरोसा रखो
@@ -185,13 +186,13 @@
                                 वक़्त का बस अभी इंतेज़ार है"<br>________________________
                          </span> 
 
-                         <img src="yourquotes\x9zV8914.webp" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                         <img src="yourquotes\x9zV8914.webp" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>
                        	" Kuch chehre(tasveerein) bs yaad bnkr reh jaate hain "<br>
                        	________________________
                          </span> 
 
-                         <img src="yourquotes\1587318043412.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                         <img src="yourquotes\1587318043412.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">________________________<br>
                        	" हवाओं को ज़ुल्फ़ों से,<br>
                                 अभी और थोड़ा खेलने दे,<br>
@@ -224,6 +225,12 @@
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
+
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+
+          <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
