--- a/quotes-2.html
+++ b/quotes-2.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="logo.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="script.js">
         <!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -77,7 +78,7 @@
                          <h2 class="heading"><span>QUOTE'S</span></h2>
                      </div>
                     <div class="row img-setting">
-                       <img src="yourquotes\1594394057496.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4">
+                       <img src="yourquotes\1594394057496.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8">
                               ________________________<br>
                                   " हाँ माना की मैं तुमसा नहीं हूँ<br>
@@ -106,14 +107,14 @@
                                     हर किसीकी पेहचान तो अब जात,पैसा और हुस्न से चलता है
                                      "<br>________________________<br><br><br></span>
  
-                       <img src="yourquotes\1587378071220.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                       <img src="yourquotes\1587378071220.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">
                                    ________________________<br>
                               " Khabon me trasha hoon tumhe<br>
                                 Ankhon se utara hoon tumhe<br>
                                 Phir kahin jaakr paaya hoon tumhe "<br>________________________</span>
 
-                        <img src="yourquotes\1588689268417.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                        <img src="yourquotes\1588689268417.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8" style="padding: 5vw">
                                 ________________________<br>
                               " ये ज़ुलफैं ये अदायें हमे न दिखाईये<br>
@@ -122,7 +123,7 @@
                                 अब फिरसे दिल को किसीकी चाहत न होगी,<br>
                                 अब फिरसे मोहब्बत न होगी "<br>________________________</span>
 
-                         <img src="yourquotes\1588091911898.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4">
+                         <img src="yourquotes\1588091911898.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8">
                                 ________________________<br>
                                 " चलो यारों अब अलविदा<br>
@@ -178,6 +179,12 @@
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
+
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+
+          <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
