--- a/sketch-2.html
+++ b/sketch-2.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="logo.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="script.js">
         <!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -79,23 +80,23 @@
                     <div class="row img-setting">
                        
 
-                               <img src="Sketch\Nawaz.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Nawaz.jpg" alt="cover images-4" width="400" height="350" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                               NAWAZUDDIN SIDDIQUI</span>
 
-                               <img src="Sketch\Akshay Kumar.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Akshay Kumar.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                AKSHAY KUMAR</span>
 
-                               <img src="Sketch\Hritik Roshan.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Hritik Roshan.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-10">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                               HRITIK ROSHAN</span>
 
-                               <img src="Sketch\Daya.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Daya.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                Daya(TMKOC)</span>
 
-                               <img src="Sketch\Jethalal.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Jethalal.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                JETHALAL(TMKOC)</span>
 
@@ -114,6 +115,12 @@
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
+
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+            
+          <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
