--- a/sketch.html
+++ b/sketch.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="logo.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="script.js">
         <!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -77,37 +78,37 @@
                          <h2 class="heading"><span>SKETCH</span></h2>
                      </div>
                     <div class="row img-setting">
-                       <video  alt="cover images-4"class="col-lg-4" width="400" height="300" controls loop>
+                       <video  alt="cover images-4"class="col-lg-4 col-md-4 col-8" width="400" height="300" controls loop>
                           <source src="SSR.mp4" type="video/mp4">
                         </video>
                        <span class="col-lg-8 sketch">SUSHANT SINGH RAJPUT</span>  
  
-                       <video  alt="cover images-4"class="col-lg-4" width="400" height="300" controls loop>
+                       <video  alt="cover images-4"class="col-lg-4 col-md-4 col-8" width="400" height="300" controls loop>
                           <source src="bigbrother.mp4" type="video/mp4">
                         </video>
                        <span class="col-lg-8 sketch" style="padding: 5vw">MY BIG BROTHER</span>  
 
-                        <img src="Sketch\Rohit Sharma.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                        <img src="Sketch\Rohit Sharma.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                ROHIT SHARMA</span>
 
-                         <img src="Sketch\Irfan Khan.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                         <img src="Sketch\Irfan Khan.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                IRFAN KHAN</span>
 
-                               <img src="Sketch\Rishi.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Rishi.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                               RISHI KAPOOR</span>
 
-                               <img src="Sketch\Heath Ledger.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Heath Ledger.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                HEATH LEDGER</span>
 
-                               <img src="Sketch\Aish.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="Sketch\Aish.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                               AISHWARIYA RAI BACHCHAN</span>
 
-                               <img src="FB_IMG_1590468920406.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4">
+                               <img src="FB_IMG_1590468920406.jpg" alt="cover images-4" width="400" height="300" class="col-lg-4 col-md-4 col-8">
                        <span class="col-lg-8 sketch" style="padding: 5vw">
                                TARAK MEHTA KA OOLTA CHASHMAH</span>
 
@@ -126,6 +127,12 @@
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
             </footer>
+
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+
+          <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
