--- a/contact.html
+++ b/contact.html
@@ -88,10 +88,14 @@
                     <h6>i am on the yourquote's,you can follow me by clicking below link :</h6>
                     <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a></span>
 
+                  </div>
+                </div>
+              </section>
+
                 
 
 
-            <footer class=" container text-center" style="margin-bottom: 0;margin-top: 10vw;">
+            <footer class=" container text-center" style="margin-bottom:20px;margin-top: 10vw;">
                     Copyright&copy;2020Syahi.All rights reserved.<br>
                     developed & blog by <a href="https://www.facebook.com/ravi2615/">Ravi Shankar</a>
                </div>
