--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <a href="index.html" class="navbar-brand"> Syahi </a></div>
 
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbaraid">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"></span><div class="text-light">menu</div>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbaraid">
