--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,14 @@
                      </div>
                     <div class="row img-setting">
 
-                       <img src="IMG_20200710_021324.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-4">
-                       <span class="col-lg-8" style="padding: 10vw">   
+                       <img src="IMG_20200710_021324.jpg" alt="cover images-4" width="1000" height="500" class="col-lg-3">
+                       <div class="col-lg-9" style="padding: 10vw">   
                         <h5> hey! guys welcome to my blog</h5><br>
                     <h6>i am on the facebook,you can follow me by clicking below link :</h6>
                     <a href="https://www.facebook.com/ravi2615/">https://www.facebook.com/ravi2615/</a>
                     <h6>i am on the yourquote's,you can follow me by clicking below link :</h6>
-                    <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a></span>
-
+                    <a href="https://www.yourquote.in/ravi_shankar2615">https://www.yourquote.in/ravi_shankar2615</a>
+                   </div>
                   </div>
                 </div>
               </section>
